feat: Implement AstraDB vector store retrieval, update embedding model configuration, add NaN handling to data ingestion, and configure Docker Compose to load environment variables.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - "8501:8501"
     volumes:
       - .:/app
+    env_file:
+      - .env
     environment:
       - SELENIUM_URL=http://browser:4444
     depends_on:
