--- a/prod_assistant/config/config.yaml
+++ b/prod_assistant/config/config.yaml
@@ -8,20 +8,23 @@ embedding_model:
 retriever:
   top_k: 4
 
-llm:
-  groq:
-    provider: "groq"
-    model_name: "llama-3.3-70b-versatile"
-    temperature: 0
-    max_output_tokens: 2048
+  llm:
+    groq:
+      provider: "groq"
+      model_name: "qwen/qwen-3-32b"       # replaces llama-3.3-70b
+      temperature: 0
+      max_output_tokens: 2048
 
-  google:
-    provider: "google"
-    model_name: "gemini-2.0-flash"
-    temperature: 0
-    max_output_tokens: 2048
+    google:
+      provider: "google"
+      model_name: "gemini-2.5-flash"
+      temperature: 0
+      max_output_tokens: 2048
 
-  openai:
-    provider: "openai"
-    model_name: "gpt-4o"
-    temperature: 0
+    openai:
+      provider: "openai"
+      model_name: "gpt-4o-mini"
+      temperature: 0
+      max_output_tokens: 2048
+
+
